# taico_airbyte

airbyte-integrations/connectors/source-adform/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-adform/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-adform/source_adform/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-adform/source_adform/schemas/: report_data.json
airbyte-integrations/connectors/source-adform/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
airbyte-integrations/connectors/source-pubmatic/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-pubmatic/source_pubmatic/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-pubmatic/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
